# [[file:adaptors.note::b98eeb06][b98eeb06]]
[package]
name = "gosh-adaptor"
version = "0.1.0"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Adaptor for chemical model"
homepage = "https://github.com/gosh-rs/gosh-adaptor"
repository = "https://github.com/gosh-rs/gosh-adaptor"
license = "MIT OR Apache-2.0"
exclude = ["bin/*", "docs/*", "lib/*"]

[dependencies]
shlex = "1"
dirs = "2"
rustyline = {version = "9.1", features = ["with-fuzzy"]}
rustyline-derive = "0.6"
clap = {version="4", features = ["derive"]}
###########
gosh-core = { version="0.1.0" }
gosh-model = { version="0.1.0" }
text_parser = { version = "0.3.0", package = "gchemol-parser" }

[features]
adhoc = [] # for adhoc hacking
# b98eeb06 ends here
