# [[file:adaptors.note::b98eeb06][b98eeb06]]
[package]
name = "gosh-adaptor"
version = "0.2.2"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Adaptor for chemical model"
homepage = "https://github.com/gosh-rs/gosh-adaptor"
repository = "https://github.com/gosh-rs/gosh-adaptor"
license = "MIT OR Apache-2.0"
exclude = ["bin/*", "docs/*", "lib/*"]

[dependencies]
shlex = "1"
dirs = "2"
###########
gosh-core = { version="0.2.0" }
gosh-model = { version="0.2.0" }
gosh-repl = "0.1.3"
# NOTE: remove
text_parser = { version = "0.3.0", package = "gchemol-parser" }
gchemol-parser = { version = "0.5.0" }
grep-reader = "0.1.3"
winnow = "0.6"
serde = { version = "1.0", features = ["derive"] }
gosh-dataset = { version = "0.2.1" }
clap = {version="4", features = ["derive"]}
# gosh-dataset = {path = "/home/ybyygu/Workspace/Programming/structure-predication/parquet-tools/"}

[features]
adhoc = [] # for adhoc hacking
# b98eeb06 ends here
